# earthquake-notifier

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yaml
events/: schedule.json
src/: config.rs  earthquake.rs  fetcher.rs  handler.rs  main.rs  matcher.rs  notifier.rs
